@@ -140,3 +140,4 @@ LOCALES = {
 VERSION = '1.0b1'
 
 ANONYMOUS_PASSWORD = ""
+LATEST_COMMENTS_LIMIT = 5
