@@ -1,4 +1,5 @@
 {% load blog_filters %}
+{% load comment_filters %}
 
 <div id="sidebar_container">
 	<div class="widget">
@@ -48,6 +49,7 @@
 			</div>
 		</div>
 	</div>
+	{% get_latest_comments %}
 	<div class="widget">
 		<div class="widget_box">
 			<div class="widget_title">
