@@ -1,3 +1,10 @@
+2008-09-11  Alper KANAT  <alperkanat@gmail.com>
+
+	* media/images/latest_comments.png, media/css/style.css,
+	settings-example.py, comments/templatetags/comment_filters.py,
+	templates/blog/latest_comments.html, templates/blog/sidebar.html, TODO:
+	latest comments (limit in settings.py) are shown on the sidebar now..
+	
 2008-09-09  Alper KANAT  <alperkanat@gmail.com>
 
 	* blog/models.py, templates/blog/comments.html: Comments are now ordered in
